--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@types/bcrypt": "^3.0.0",
         "@types/express": "^4.16.1",
         "@types/jsonwebtoken": "^8.3.2",
+        "@types/knex": "^0.16.1",
+        "@types/morgan": "^1.7.35",
         "@types/mysql": "^2.15.6",
         "@types/passport": "^1.0.0",
         "@types/passport-http-bearer": "^1.0.33",
@@ -29,6 +31,8 @@
         "dotenv": "^8.0.0",
         "express": "^4.16.4",
         "jsonwebtoken": "^8.5.1",
+        "knex": "^0.18.0",
+        "morgan": "^1.9.1",
         "mysql": "^2.17.1",
         "node-sass": "^4.12.0",
         "passport": "^0.4.0",
