--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/express": "^4.16.1",
         "@types/jsonwebtoken": "^8.3.2",
         "@types/knex": "^0.16.1",
+        "@types/moment": "^2.13.0",
         "@types/morgan": "^1.7.35",
         "@types/mysql": "^2.15.6",
         "@types/passport": "^1.0.0",
@@ -32,6 +33,7 @@
         "express": "^4.16.4",
         "jsonwebtoken": "^8.5.1",
         "knex": "^0.18.0",
+        "moment": "^2.24.0",
         "morgan": "^1.9.1",
         "mysql": "^2.17.1",
         "node-sass": "^4.12.0",
