--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "@types/react": "^16.8.17",
         "@types/react-dom": "^16.8.4",
         "@types/react-router-dom": "^4.3.3",
+        "@types/react-stripe-elements": "^1.1.10",
+        "@types/stripe": "^6.30.8",
         "bcrypt": "^3.0.6",
         "bootstrap": "^4.3.1",
         "css-loader": "^1.0.1",
@@ -43,7 +45,9 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.0",
+        "react-stripe-elements": "^3.0.0",
         "sass-loader": "^7.1.0",
+        "stripe": "^7.4.0",
         "style-loader": "^0.23.1",
         "ts-loader": "^5.4.5",
         "typescript": "^3.4.5",
