--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "express": "^4.16.4",
         "jsonwebtoken": "^8.5.1",
         "knex": "^0.18.0",
+        "lodash": "^4.17.14",
         "moment": "^2.24.0",
         "morgan": "^1.9.1",
         "mysql": "^2.17.1",
